# LibreSim

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
.claude/: context.md
backend/: Dockerfile  pyproject.toml  requirements.txt  validate.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: websocket.py
backend/src/api/routes/: blocks.py  import_export.py  models.py  simulation.py
backend/src/blocks/: __init__.py  registry.py
backend/src/models/: __init__.py  block.py  model.py  simulation.py
backend/src/osk/: __init__.py  block.py  sim.py  state.py
backend/src/osk/blocks/: __init__.py  continuous.py  control_analysis.py  discrete.py  math_ops.py  nonlinear.py  observers.py  signal_processing.py  sinks.py  sources.py  subsystems.py
backend/src/parsers/: __init__.py  mdl_parser.py
backend/src/services/: model_service.py
backend/src/simulation/: __init__.py  compiler.py  osk_adapter.py  runner.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_blocks.py  test_compiler.py  test_control_analysis.py  test_mdl_parser.py  test_osk.py  test_services.py  test_simulation.py
docs/: SQA.md  control-analysis-visualization-design.md  mdl-format-reference.md  running-headless.md
examples/: 01_sine_wave_basic.json  01_sine_wave_basic.mdl  02_first_order_step_response.json  02_first_order_step_response.mdl  03_pid_controller.json  03_pid_controller.mdl  04_mass_spring_damper.json  04_mass_spring_damper.mdl  04b_mass_spring_damper_underdamped.json  05_signal_filtering.json  05a_moving_average_filter.json  05b_lowpass_filter.json  06_kalman_filter_estimation.json  06b_kalman_position_velocity.json  07_thermostat_relay_control.json  07a_bode_plot_analysis.json  07b_nyquist_plot_analysis.json  07c_pole_zero_map.json  07d_step_response_info.json  08_lookup_table_nonlinear.json  09_second_order_damping.json  09_second_order_damping.mdl  10_rate_limiting_quantization.json  11_vector_signal_processing.json  README.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/blocks/: continuous.ts  control_analysis.ts  discrete.ts  index.test.ts  index.ts  math.ts  nonlinear.ts  observers.ts  routing.ts  signal_processing.ts  sinks.ts  sources.ts  subsystems.ts
frontend/src/components/Editor/: BlockNode.test.tsx  BlockNode.tsx  Editor.tsx  SubsystemNode.tsx
frontend/src/components/Properties/: PropertiesPanel.tsx
frontend/src/components/Settings/: SettingsModal.tsx
frontend/src/components/Sidebar/: Sidebar.tsx
frontend/src/components/Simulation/: PlotWindow.tsx  PlotWindowManager.tsx  SimulationPanel.tsx
frontend/src/components/Toast/: Toast.tsx
frontend/src/components/Toolbar/: Toolbar.tsx
frontend/src/data/: examples.ts
frontend/src/store/: index.ts  libraryStore.test.ts  libraryStore.ts  modelStore.test.ts  modelStore.ts  simulationStore.test.ts  simulationStore.ts  uiStore.test.ts  uiStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: block.ts  index.ts  library.test.ts  library.ts  model.ts  simulation.ts
frontend/src/utils/: mdlExporter.test.ts  mdlExporter.ts  mdlImporter.test.ts  mdlImporter.ts  nanoid.test.ts  nanoid.ts
